# pyisetcam

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
docs/: hw-isp-simulation.md  implementation-plan.md  install-guide.md  migration-gap-ledger.yaml  migration.md  tutorial.md
examples/: __init__.py  end_to_end.py  explicit_pipeline.py  quality_metrics.py  scene_from_file.py
reports/hwisp/: frame_details.html  hwisp_parameter_requirements_report.html  hwisp_parameter_requirements_summary.json  hwisp_technical_report.html  hwisp_technical_summary.json  implementation_verification_integrated_summary.json  implementation_verification_report.html  implementation_verification_report_integrated.html  implementation_verification_summary.json  index.html  three_a_summary.json  timeline_report.md  timeline_summary.json
reports/migration-gap/: latest.json
reports/parity/: README.md  camera_field_parity_report.md  pipeline_rt_bar_small_report.md  pipeline_rt_bar_small_summary.json
src/pyisetcam/: __init__.py  assets.py  camera.py  color.py  description.py  display.py  exceptions.py  fileio.py  fonts.py  hwisp.py  hwisp_db.py  ip.py  (+16 more)
tests/: conftest.py
tools/: audit_migration_gap.py  collect_hwisp_parameter_db.py  decode_dng_for_octave.py  fetch_upstream.py  parity_report.py  regenerate_parity_baselines.py  render_field_quality_evidence.py  render_hwisp_implementation_report.py  render_hwisp_parameter_requirements_report.py  render_hwisp_technical_report.py  render_hwisp_timeline_report.py  render_parity_evidence.py  render_pipeline_rt_bar_parity.py
(+309 files in other folders)
